Fix build on latest JDK9